Rotated table to display columns, need to fix weird center alignment though

--- a/static/scss/custom_loadout.css
+++ b/static/scss/custom_loadout.css
@@ -1,3 +1,10 @@
 .icon_type {
-	height: 50px;
+	width: 5vw;
+}
+
+tr {
+	display: table-cell;
+}
+ td {
+	display: block;
 }
